added and updated lines 69-72

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -66,10 +66,10 @@
 				</div>
 			</div>
 			<div class="picContainer1">
-				<div class="imgBox"> <img src="Images\sample.jpg" alt="image1"> </div>
-				<div class="imgBox"> </div>
-				<div class="imgBox"></div>
-				<div class="imgBox"></div>
+				<div class="imgBox"> <img src="Images\img1.png" alt="image1"> </div>
+				<div class="imgBox"> <img src="Images\img2.png" alt="image2"> </div>
+				<div class="imgBox"> <img src="Images\img3.png" alt="image3"> </div>
+				<div class="imgBox"> <img src="Images\img4.png" alt="image4"> </div>
 			</div>
 		</div>
 	</div>
