renamed porfolio.html to portfolio.html

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -12,7 +12,7 @@
 		<span class="logoutButton"> <a href="index.html"> Log out</a> </span>
 		<span class="nav3">
 			<a href="futurePlans.html"> Future plans</a>
-			<a href="porfolio.html"> Portfolio</a>
+			<a href="portfolio.html"> Portfolio</a>
 			<a href="aboutMe.html"> About me</a>
 		</span>
 	</div>
