added content inside imgBox

--- a/futurePlans.html
+++ b/futurePlans.html
@@ -4,7 +4,7 @@
 	<title>shaine.com / Future plans</title>	
 	<link rel="stylesheet" href="CSS\mainCss.css">
 	<link rel="stylesheet" href="CSS\futurePlansCss.css">
-	<script src="homeScript.js"> </script>
+	<!-- <script src="homeScript.js"> </script> -->
 </head>
 <body>
 	<div class="bg"></div>
@@ -12,22 +12,36 @@
 		<span class="titleWeb"> <a href="#">shaine.com</a> </span>
 		<span class="logoutButton"> <a href="index.html"> Log out</a> </span>
 		<span class="nav3">
-			<a href="futurePlans.html"> Future plans</a>
-			<a href="portfolio.html"> Portfolio</a>
-			<a href="aboutMe.html"> About me</a>
+			<a href="futurePlans.html">Future plans</a>
+			<a href="portfolio.html">Portfolio</a>
+			<a href="aboutMe.html">About me</a>
 		</span>
 	</div>
 
 	<div class="container">	
 			<div class="textContainer1">
 				<span class="titleContainer1"> <p>My future plans</p> </span>
-				<p>Get to know my plans in the next years</p>
+				<p>Get to know my plans and goals in the next years</p>
 			</div>
 		<div class="container1">
 			<div class="picContainer1">
-				<div class="imgBox"></div>
-				<div class="imgBox"></div>
-				<div class="imgBox"></div>
+				<div class="imgBox">
+					<span class="imgBoxTitle"><p>Let's go six-digit income!</p></span>
+					<p>After graduating college, it is time to look for jobs that would match my forte. This is a long-term plan and I will start at the very bottom.</p>
+					<p>Join one company and another, continously gaining experience, learning new things in the industry as well as honing the skills that will benefit both myself and the company I will take part on.</p>
+				</div>
+
+				<div class="imgBox">
+					<span class="imgBoxTitle"><p>Spoil the inner child</p></span>
+					<p>What's better than to spoil yourself with things you never had when you were young.</p>
+					<p>Own a house, travel to other places, have a cat, and so much more things that I want to experience in your life before I disappear.</p>
+				</div>
+
+				<div class="imgBox">
+					<span class="imgBoxTitle"><p>Happy life and peaceful mind</p></span>
+					<p>Living a life full of hapiness is a blessing I want to receive. I also want to give some back my parents, help those in need, and donate to an animal shelter.</p>
+					<p>I want to live with a partner, no kids, just the two of us in a small house where we spend the rest of our lives together until we get old. </p>
+				</div>
 			</div>
 		</div>
 	</div>
