modified some lines

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -4,17 +4,19 @@
 	<title>shaine.com / About Me </title>	
 	<link rel="stylesheet" href="CSS\mainCss.css">
 	<link rel="stylesheet" href="CSS\aboutMeCss.css">
-	<!-- <script src="aboutMeScript.js"> </script> -->
+	<script src="JS\mainJS.js"></script>
 </head>
 <body>
 	<div class="navbar">
-		<span class="titleWeb"> <a href="#">shaine.com</a> </span>
-		<span class="logoutButton"> <a href="index.html"> Log out</a> </span>
-		<span class="nav3">
-			<a href="futurePlans.html"> Future plans</a>
-			<a href="portfolio.html"> Portfolio</a>
-			<a href="aboutMe.html"> About me</a>
-		</span>
+		<nav>
+			<span class="titleWeb"> <a href="#">shaine.com</a> </span>
+			<span class="logoutButton"> <a href="index.html">Log out</a> </span>
+			<span class="nav3">
+				<a href="futurePlans.html">Future plans</a>
+				<a href="portfolio.html">Portfolio</a>
+				<a href="aboutMe.html">About me</a>
+			</span>
+		</nav>
 	</div>
 
 	<div class="container">	
