--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>shaine.com / Log in</title>	
 	<link rel="stylesheet" href="CSS\mainCss.css">
 	<link rel="stylesheet" href="CSS\indexCss.css">
-	<script src="homeScript.js"> </script>
+	<script defer src="JS\indexJS.js"> </script>
 </head>
 <body>
 	<div class="bg"></div>
@@ -13,19 +13,22 @@
 	</div>
 
 	<div class="container">
-		<div class="titleContainer1"> <p> Sign In </p> </div>
-		<div class="container1"> 
-			<div class="container2">
-				<label class="inputBox" for="uname"> Username </label> <br>
-				<input class="inputBox" type="text" id="uname"> 
-				<label class="inputBox" for="password"> Password </label> <br>
-				<input class="inputBox" type="password" id="pass"> 
+		<form id="form" method="post"> 
+			<div class="titleContainer1"> <p>Sign In</p> </div>	
+			<div class="container1"> 
+				<div class="container2">
+					<span class="titleLabel"><p>Username</p></span>
+					<input class="inputBox" type="text" id="uname" required> 
+					<span class="smallText" id="unameM"> <p>Enter your username</p> </span>
+					<span class="titleLabel"><p>Password</p></span>
+					<input class="inputBox" type="password" id="pass"> 
+					<span class="smallText" id="passM"> <p>Enter your 8-digit password</p> </span>
+				</div>
+				<div class="logInButton">
+					<label> <input type="submit" value="Log In" id="submit" onclick="inputChecker()"> </label>
+				</div>
 			</div>
-			<div class="logInButton">
-				<label> <input type="submit" value="Log In"> </label>
-			</div>
-			<span class="smallText"><p>Forgot password?</p></span>
-		</div>
+		</form>
 	</div>
 </body>
 </html>
