modified navigation bars

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -4,7 +4,7 @@
 	<title>shaine.com / About Me </title>	
 	<link rel="stylesheet" href="CSS\mainCss.css">
 	<link rel="stylesheet" href="CSS\aboutMeCss.css">
-	<script src="JS\mainJS.js"></script>
+	<script defer src="JS\mainJS.js"></script>
 </head>
 <body>
 	<div class="navbar">
@@ -12,9 +12,9 @@
 			<span class="titleWeb"> <a href="#">shaine.com</a> </span>
 			<span class="logoutButton"> <a href="index.html">Log out</a> </span>
 			<span class="nav3">
-				<a href="futurePlans.html">Future plans</a>
-				<a href="portfolio.html">Portfolio</a>
-				<a href="aboutMe.html">About me</a>
+				<a class="navlink" href="futurePlans.html">Future plans</a>
+				<a class="navlink" href="portfolio.html">Portfolio</a>
+				<a class="navlink" href="aboutMe.html">About me</a>
 			</span>
 		</nav>
 	</div>
