--- a/futurePlans.html
+++ b/futurePlans.html
@@ -4,18 +4,19 @@
 	<title>shaine.com / Future plans</title>	
 	<link rel="stylesheet" href="CSS\mainCss.css">
 	<link rel="stylesheet" href="CSS\futurePlansCss.css">
-	<!-- <script src="homeScript.js"> </script> -->
+	<script defer src="JS\mainJS.js"></script>
 </head>
 <body>
-	<div class="bg"></div>
 	<div class="navbar">
-		<span class="titleWeb"> <a href="#">shaine.com</a> </span>
-		<span class="logoutButton"> <a href="index.html"> Log out</a> </span>
-		<span class="nav3">
-			<a href="futurePlans.html">Future plans</a>
-			<a href="portfolio.html">Portfolio</a>
-			<a href="aboutMe.html">About me</a>
-		</span>
+		<nav>
+			<span class="titleWeb"> <a href="#">shaine.com</a> </span>
+			<span class="logoutButton"> <a href="index.html">Log out</a> </span>
+			<span class="nav3">
+				<a class="navlink" href="futurePlans.html">Future plans</a>
+				<a class="navlink" href="portfolio.html">Portfolio</a>
+				<a class="navlink" href="aboutMe.html">About me</a>
+			</span>
+		</nav>
 	</div>
 
 	<div class="container">	
