working with page transitions

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -7,13 +7,17 @@
 	<script defer src="JS\mainJS.js"></script>
 </head>
 <body>
+	<div class="loadingScreen">
+		<p> shaine.com </p>
+	</div>	
+
 	<div class="navbar">
 		<nav>
 			<span class="titleWeb"> <a href="#">shaine.com</a> </span>
 			<span class="logoutButton"> <a href="index.html">Log out</a> </span>
 			<span class="nav3">
 				<a class="navlink" href="futurePlans.html">Future plans</a>
-				<a class="navlink" href="portfolio.html">Portfolio</a>
+				<a class="navlink" href="portfolio.html" onclick="appear()">Portfolio</a>
 				<a class="navlink" href="aboutMe.html">About me</a>
 			</span>
 		</nav>
