added contents and modified styles

--- a/aboutMe2.html
+++ b/aboutMe2.html
@@ -22,60 +22,131 @@
 			<div class="navbar-brand">
 				<img src="Images/logoWhite.png" class="imageSize img-fluid" alt="shaine.comWhiteLogo">
 			</div>	
-		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLink" aria-controls="navbarLink" aria-expanded="false" aria-label="Toggle navigation">
-		    	<i class="fas fa-bars" style="color:#fff; font-size:28px;"></i>
+		    <button class="navbar-toggler btn shadow-none border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLink" aria-controls="navbarLink" aria-expanded="false" aria-label="">
+		    	3 lines here
 		    </button>
 			<!-- Container for the 3 links & Log out button -->
 			<div class="collapse navbar-collapse" id="navbarLink">
-				<ul class="navText navbar-nav me-auto mb-2 mb-lg-0">
+				<ul class="navText navbar-nav ms-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-        				<a class="nav-link" href="#">About me</a>
+        				<a class="nav-link" href="aboutMe2.html">About me</a>
         			</li>
 					<li class="nav-item">
-        				<a class="nav-link" href="#">Portfolio</a>
+        				<a class="nav-link" href="portfolio2.html">Portfolio</a>
         			</li>
 					<li class="nav-item">
-        				<a class="nav-link" href="#">Future plans</a>
+        				<a class="nav-link" href="futurePlans2.html">Future plans</a>
         			</li>        			
 				</ul>
+				<button class="logOutbutton btn shadow-none border-0" type="button">Log out</button>
 			</div>
 		</div>
 	</nav>	
 
-	<div class="container-fluid">
-		<!-- Content -->
-		<div class="container text-center">
-			<div class="row">
-				<div class="col-md-6">
-					naka align this sa left
+	<!-- Content -->
+	<div class="bgColor1 container-fluid">
+		<div class="container p-3">
+			<div class="row my-4 align-items-center">
+				<div class="col-md-7 leftBox1">
+					<div class="header1 vstack">
+						<p class="lh-1 my-0">Meet the Creator!</p>
+					</div>
+					<div class="body1 my-2">
+						<p> Hi! My name is <b>Misty</b>, a second year student from Bicol University. I am currently taking Bachelor of Science in Information Technology and I aspire to be a UI/UX Designer.</p> <br>
+						<p> Currently a Junior Councilor under the Public Relations Committee of BUCS CircUITS – Circle of Unified Information Technology Students. I specialize in creating publication materials and event posters as well as some of the announcements for information dissemination within the department.</p>
+					</div>
+					<div class="logOutButton">
+						<a href="portfolio.html"> 
+							<button class="btn lh-1 shadow border-0 p-3 my-2" type="button"><p>SEE PORTFOLIO</p></button>
+						</a>
+					</div>
 				</div>
-				<div class="col-md-6">
-					container for an image
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4">
-					container for the three remaining images
-				</div>
-				<div class="col-md-4">
-					container for the three remaining images
-				</div>
-				<div class="col-md-4">
-					container for the three remaining images
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4">
-					hobbies
-				</div>
-				<div class="col-md-4">
-					likes
-				</div>
-				<div class="col-md-4">
-					others
+				<div class="col-md-5">
+					<div class="card ratio-1x1 p-2 rounded-3 shadow-lg card1  border-0">
+						<img class="rounded-2" src="Images/img1-v2.png" alt="image1">
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+			<!-- Images -->
+	<div class="container-fluid">
+		<div class="container p-3">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card ratio-1x1 rounded-3 shadow card1 border-0 my-3 mx-1 p-2">
+						<img class="rounded-2" src="Images/img2-v2.png" alt="image2">
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card ratio-1x1 rounded-3 shadow card1 border-0 my-3 mx-1 p-2">
+						<img class="rounded-2" src="Images/img4-v2.png" alt="image4">
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card ratio-1x1 rounded-3 shadow card1 border-0 my-3 mx-1 p-2">
+						<img class="rounded-2" src="Images/img3-v2.png" alt="image3">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>		
+
+	<div class="bgColor1 container-fluid">
+		<div class="container p-3">
+			<div class="row text-center">
+				<div class="col-md-4">
+					<div class="bottomBox rounded-1 shadow p-2 m-2">
+						<p>HOBBIES</p>
+					</div>
+					<div class="tagBox mx-3">
+						<div class="tagContent"><p>Watching anime</p></div>
+						<div class="tagContent"><p>Movies</p></div> 
+						<div class="tagContent"><p>Reading manhwa</p></div>
+						<div class="tagContent"><p>Sleeping</p></div> 
+						<div class="tagContent"><p>Watching series</p></div> 
+						<div class="tagContent"><p>Cartoons</p></div> 
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="bottomBox rounded-1 shadow p-2 m-2">
+						<p>LIKES</p>
+					</div>
+					<div class="tagBox mx-3">
+						<div class="tagContent"><p> Ice cream </p></div>
+						<div class="tagContent"><p> Japan </p></div> 
+						<div class="tagContent"><p> Attack on Titan </p></div> 
+						<div class="tagContent"><p> Cookies and Cream </p></div>
+						<div class="tagContent"><p> Cats </p></div>
+						<div class="tagContent"><p> Miraculous Ladybug </p></div> 
+						<div class="tagContent"><p> The Cults </p></div>
+						<div class="tagContent"><p> Raven </p></div> 
+						<div class="tagContent"><p> The Disastrous Life of Saiki K. </p></div> 
+						<div class="tagContent"><p> Memes </p></div> 
+						<div class="tagContent"><p> Lana Del Rey </p></div> 
+						<div class="tagContent"><p> French fries </p></div> 
+						<div class="tagContent"><p> Match Made in Heaven by Chance </p></div> 
+						<div class="tagContent"><p> Sweets </p></div> 
+						<div class="tagContent"><p> Soul Knight </p></div> 
+						<div class="tagContent"><p> Men I Trust </p></div> 
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="bottomBox rounded-1 shadow p-2 m-2">
+						<p>OTHERS</p>
+					</div>
+					<div class="tagBox mx-3"> 
+						<div class="tagContent"><p>She/Her</p></div>
+						<div class="tagContent"><p>20</p></div> 
+						<div class="tagContent"><p>Graphic Designer</p></div>
+						<div class="tagContent"><p>Libra</p></div>
+						<div class="tagContent"><p>Daraga</p></div>
+						<div class="tagContent"><p>ISTJ-T</p></div>
+						<div class="tagContent"><p>Albay</p></div>
+						</div>
+					</div>	
+			</div>
+		</div>
+	</div>		
 </body>
 </html>
