--- a/aboutMe.html
+++ b/aboutMe.html
@@ -7,146 +7,88 @@
 	<title>shaine.com · About Me</title>
 
 	<!-- Custom Stylesheets -->
-	<link rel="stylesheet" href="CSS\mainCss2.css">
-	<link rel="stylesheet" href="CSS\aboutMeCss2.css">
+	<link rel="stylesheet" href="CSS\mainCss.css">
+	<link rel="stylesheet" href="CSS\aboutMeCss.css">
+	<script defer type="text/javascript" src="JS\mainJS.js" ></script>
 
 	<!-- Bootstrap CDN links -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"> </script>
 </head>
 
-<body class="bgColorBody">
-	<!-- Header -->
-	<nav class="bgColorNavbar navbar navbar-expand-md shadow">
-		<div class="container-fluid">
+<body>
+	<!-- Navbar -->
+	<nav class="navbar navbar-expand-md mt-1">
+		<div class="container-fluid mx-2">
 			<div class="navbar-brand">
-				<img src="Images/logoWhite.png" class="imageSize img-fluid" alt="shaine.comWhiteLogo">
+				<img src="Images/logoBlack.png" class="imageSize img-fluid" alt="logo">
 			</div>	
-		    <button class="navbar-toggler btn shadow-none border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLink" aria-controls="navbarLink" aria-expanded="false" aria-label="">
-		    	3 lines here
+		    <button class="navbar-toggler btn shadow-none border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLink" aria-controls="navbarLink" aria-expanded="false" aria-label="Toggler">
+		    	<div class="">
+		    		<div class="togglerBorder"></div>
+			    	<div class="togglerBorder"></div>
+			    	<div class="togglerBorder"></div>
+		    	</div>
 		    </button>
 			<!-- Container for the 3 links & Log out button -->
 			<div class="collapse navbar-collapse" id="navbarLink">
-				<ul class="navText navbar-nav ms-auto mb-2 mb-lg-0">
+				<ul class="navText navbar-nav ms-auto">
 					<li class="nav-item">
-        				<a class="nav-link" href="aboutMe2.html">About me</a>
+        				<a class="nav-link" href="aboutMe.html">About me</a>
         			</li>
 					<li class="nav-item">
-        				<a class="nav-link" href="portfolio2.html">Portfolio</a>
+        				<a class="nav-link" href="portfolio.html">Portfolio</a>
         			</li>
 					<li class="nav-item">
-        				<a class="nav-link" href="futurePlans2.html">Future plans</a>
+        				<a class="nav-link" href="futurePlans.html">Future plans</a>
         			</li>        			
 				</ul>
-				<button class="logOutbutton btn shadow-none border-0" type="button">Log out</button>
+				<div class="logOutbutton py-3">
+					<a><button class="btn shadow-sm border-0 rounded-1" type="button" onclick="">
+					Log out</button></a>
+				</div>
 			</div>
 		</div>
-	</nav>	
+	</nav>
 
-	<!-- Content -->
-	<div class="bgColor1 container-fluid">
-		<div class="container p-3">
-			<div class="row my-4 align-items-center">
-				<div class="col-md-7 leftBox1">
-					<div class="header1 vstack">
-						<p class="lh-1 my-0">Meet the Creator!</p>
-					</div>
-					<div class="body1 my-2">
-						<p> Hi! My name is <b>Misty</b>, a second year student from Bicol University. I am currently taking Bachelor of Science in Information Technology and I aspire to be a UI/UX Designer.</p> <br>
-						<p> Currently a Junior Councilor under the Public Relations Committee of BUCS CircUITS – Circle of Unified Information Technology Students. I specialize in creating publication materials and event posters as well as some of the announcements for information dissemination within the department.</p>
-					</div>
-					<div class="logOutButton">
-						<a href="portfolio.html"> 
-							<button class="btn lh-1 shadow border-0 p-3 my-2" type="button"><p>SEE PORTFOLIO</p></button>
-						</a>
-					</div>
+	<div class="container-fluid">
+		<div class="container">
+			<div class="row justify-content-center align-items-center text-center py-5 vstack">
+				<div class="col-md-12 lh-1 pageTitle">
+					<p>Meet the <span class="textColored">creator</span>!</p>
 				</div>
-				<div class="col-md-5">
-					<div class="card ratio-1x1 p-2 rounded-3 shadow-lg card1  border-0">
-						<img class="rounded-2" src="Images/img1-v2.png" alt="image1">
-					</div>
+				<div class="col-md-7 lh-1.5 px-3 pageContent">
+					<p> Hi! My name is <b>Misty Shaine</b>, a second year student from Bicol University. Currently taking Bachelor of Science in Information Technology, and aspires to be a UI/UX Designer.</p>
+				</div>
+				<div class="col-md-4 my-2 customButton">
+					<a href="portfolio.html"> <button class="btn outline-0 shadow border-0 rounded-1 lh-1 px-3 py-2" type="button"> SEE PORTFOLIO </button> </a>
 				</div>
 			</div>
 		</div>
 	</div>
-			<!-- Images -->
-	<div class="container-fluid">
-		<div class="container p-3">
-			<div class="row">
-				<div class="col-md-4">
-					<div class="card ratio-1x1 rounded-3 shadow card1 border-0 my-3 mx-1 p-2">
-						<img class="rounded-2" src="Images/img2-v2.png" alt="image2">
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card ratio-1x1 rounded-3 shadow card1 border-0 my-3 mx-1 p-2">
-						<img class="rounded-2" src="Images/img4-v2.png" alt="image4">
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card ratio-1x1 rounded-3 shadow card1 border-0 my-3 mx-1 p-2">
-						<img class="rounded-2" src="Images/img3-v2.png" alt="image3">
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>		
 
-	<div class="bgColor1 container-fluid">
-		<div class="container p-3">
-			<div class="row text-center">
-				<div class="col-md-4">
-					<div class="bottomBox rounded-1 shadow p-2 m-2">
-						<p>HOBBIES</p>
-					</div>
-					<div class="tagBox mx-3">
-						<div class="tagContent"><p>Watching anime</p></div>
-						<div class="tagContent"><p>Movies</p></div> 
-						<div class="tagContent"><p>Reading manhwa</p></div>
-						<div class="tagContent"><p>Sleeping</p></div> 
-						<div class="tagContent"><p>Watching series</p></div> 
-						<div class="tagContent"><p>Cartoons</p></div> 
+	<div class="container-fluid customBG1">
+		<div class="container py-1">
+			<div class="row row-cols-lg-3 my-5 justify-content-center align-items-center text-center">
+				<div class="col-lg-4 my-1">
+					<p class="title1 lh-1">Why <span class="textColored">UI/UX Design</span>?</p>
+					<p class="content1 lh-1.5 ">
+						It was in high school where I wanted to be a programmer. As I entered college in my freshman year, I discovered something I am good at, which is graphic designing. I thought <i>"Why not I become a programmer and a designer at the same time?"</i> <br><br>
+					</p>
+				</div>
+				<div class="col-lg-4 mb-3">
+					<div class="ratio ratio-1x1">
+						<img src="Images/pic1.png">
 					</div>
 				</div>
-				<div class="col-md-4">
-					<div class="bottomBox rounded-1 shadow p-2 m-2">
-						<p>LIKES</p>
-					</div>
-					<div class="tagBox mx-3">
-						<div class="tagContent"><p> Ice cream </p></div>
-						<div class="tagContent"><p> Japan </p></div> 
-						<div class="tagContent"><p> Attack on Titan </p></div> 
-						<div class="tagContent"><p> Cookies and Cream </p></div>
-						<div class="tagContent"><p> Cats </p></div>
-						<div class="tagContent"><p> Miraculous Ladybug </p></div> 
-						<div class="tagContent"><p> The Cults </p></div>
-						<div class="tagContent"><p> Raven </p></div> 
-						<div class="tagContent"><p> The Disastrous Life of Saiki K. </p></div> 
-						<div class="tagContent"><p> Memes </p></div> 
-						<div class="tagContent"><p> Lana Del Rey </p></div> 
-						<div class="tagContent"><p> French fries </p></div> 
-						<div class="tagContent"><p> Match Made in Heaven by Chance </p></div> 
-						<div class="tagContent"><p> Sweets </p></div> 
-						<div class="tagContent"><p> Soul Knight </p></div> 
-						<div class="tagContent"><p> Men I Trust </p></div> 
-					</div>
+				<div class="col-lg-4 my-1">
+					<p class="title1 lh-1"> From nothing, to <span class="textColored">passion</span><p>
+					<p class="content1 lh-1.5 ">
+						I learned the basics of Photoshop and editing during my high school years. Graphic design started as just a requirement to complete my academic projects. When I joined a student organization in my department, graphic design became a huge part in my college life.
+					</p>
 				</div>
-				<div class="col-md-4">
-					<div class="bottomBox rounded-1 shadow p-2 m-2">
-						<p>OTHERS</p>
-					</div>
-					<div class="tagBox mx-3"> 
-						<div class="tagContent"><p>She/Her</p></div>
-						<div class="tagContent"><p>20</p></div> 
-						<div class="tagContent"><p>Graphic Designer</p></div>
-						<div class="tagContent"><p>Libra</p></div>
-						<div class="tagContent"><p>Daraga</p></div>
-						<div class="tagContent"><p>ISTJ-T</p></div>
-						<div class="tagContent"><p>Albay</p></div>
-						</div>
-					</div>	
 			</div>
 		</div>
-	</div>		
+	</div>
 </body>
 </html>
