--- a/aboutMe.html
+++ b/aboutMe.html
@@ -24,7 +24,7 @@
 				<img src="Images/logoBlack.png" class="imageSize img-fluid" alt="logo">
 			</div>	
 		    <button class="navbar-toggler btn shadow-none border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLink" aria-controls="navbarLink" aria-expanded="false" aria-label="Toggler">
-		    	<div class="">
+		    	<div>
 		    		<div class="togglerBorder"></div>
 			    	<div class="togglerBorder"></div>
 			    	<div class="togglerBorder"></div>
@@ -43,9 +43,9 @@
         				<a class="nav-link" href="futurePlans.html">Future plans</a>
         			</li>        			
 				</ul>
-				<div class="logOutbutton py-3">
-					<a><button class="btn shadow-sm border-0 rounded-1" type="button" onclick="">
-					Log out</button></a>
+				<div class="contactbutton py-3">
+					<a href="contactMe.html"><button class="btn shadow-sm border-0 rounded-1" type="button">
+					Contact Me</button></a>
 				</div>
 			</div>
 		</div>
@@ -78,7 +78,7 @@
 				</div>
 				<div class="col-lg-4 mb-3">
 					<div class="ratio ratio-1x1">
-						<img src="Images/pic1.png">
+						<img src="Images/img1.png">
 					</div>
 				</div>
 				<div class="col-lg-4 my-1">
