--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 				<img src="Images/logoBlack.png" class="imageSize img-fluid" alt="logo">
 			</div>	
 		    <button class="navbar-toggler btn shadow-none border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLink" aria-controls="navbarLink" aria-expanded="false" aria-label="Toggler">
-		    	<div class="">
+		    	<div>
 		    		<div class="togglerBorder"></div>
 			    	<div class="togglerBorder"></div>
 			    	<div class="togglerBorder"></div>
@@ -43,9 +43,9 @@
         				<a class="nav-link" href="futurePlans.html">Future plans</a>
         			</li>        			
 				</ul>
-				<div class="logOutbutton py-3">
-					<a><button class="btn shadow-sm border-0 rounded-1" type="button" onclick="">
-					Log out</button></a>
+				<div class="contactbutton py-3">
+					<a href="contactMe.html"><button class="btn shadow-sm border-0 rounded-1" type="button">
+					Contact Me</button></a>
 				</div>
 			</div>
 		</div>
@@ -61,7 +61,7 @@
 					<p>Take a look at my recent projects. For a full preview of my best works, you can download my portfolio below.</p>
 				</div>
 				<div class="col-md-4 my-2 customButton">
-					<a href="#"> <button class="btn outline-0 shadow border-0 rounded-1 lh-1 px-3 py-2" type="button"> DOWNLOAD PORTFOLIO </button> </a>
+					<a href="https://drive.google.com/file/d/1Lk3HBr_Xc0a18famgU2jyqcqUsKwVkLa/view?usp=share_link" download="Portfolio.pdf"> <button class="btn outline-0 shadow border-0 rounded-1 lh-1 px-3 py-2" type="button"> DOWNLOAD PORTFOLIO </button> </a>
 				</div>
 			</div>
 		</div>
@@ -95,7 +95,7 @@
 					<p class="title2 lh-1 mb-2">Sir Kit's ITems</p>
 					<div class="subtitle1Box subtitle2 rounded-1"><p> February 2023 </p></div>
 					<p class="content2 lh-1.5 ">
-						Weeks after the Merch Design Contest is Sir Kit's ITems, an income generating project of BUCS-CircUITS. The winning design from the contest were used as the organization's official merchandise for the academic year 2022-2023.<br><br> This is the time where I did some experiments and explored a new style that could be useful for my next projects.
+						Weeks after the Merch Design Contest is Sir Kit's ITems, an income generating project of BUCS-CircUITS. The winning design from the contest were used as the organization's official merchandise for the academic year 2022-2023.<br><br> This is the time where I did some experiments and explored new styles that could be useful for my next projects.
 					</p>
 				</div>
 				<div class="col-lg-7 order-lg-1 my-2">
