--- a/contactMe.html
+++ b/contactMe.html
@@ -1,34 +1,92 @@
-<!DOCTYPE html>
-<html lang="en"> 
+<!DOCTYPE html> 
+<html lang="en">
 <head>
-	<title>shaine.com / Log in</title>	
-	<link rel="stylesheet" href="CSS\mainCss.css">
-	<link rel="stylesheet" href="CSS\indexCss.css">
-	<script defer src="JS\indexJS.js"> </script>
-</head>
-<body>
-	<div class="bg"></div>
-	<div class="navbar">
-		<span class="titleWeb"> <a href="#">shaine.com</a> </span>
-	</div>
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width,initial-scale=1"/>
+	<meta name="description" content=""/>
+	<title>shaine.com · Contact Me</title>
 
-	<div class="container">
-		<form id="form" method="post"> 
-			<div class="titleContainer1"> <p>Sign In</p> </div>	
-			<div class="container1"> 
-				<div class="container2">
-					<span class="titleLabel"><p>Username</p></span>
-					<input class="inputBox" type="text" id="uname" required> 
-					<div class="smallText"> <p id="unameM">Enter your username</p> </div>
-					<span class="titleLabel"><p>Password</p></span>
-					<input class="inputBox" type="password" id="pass" required> 
-					<div class="smallText"> <p id="passM">Enter your 8-character password</p> </div>
-				</div>
-				<div class="logInButton">
-					<label> <input type="submit" value="Log In" id="submit" onclick="inputChecker()"> </label>
+	<!-- Custom Stylesheets -->
+	<link rel="stylesheet" href="CSS\mainCss.css">
+	<link rel="stylesheet" href="CSS\contactMeCss.css">
+	<script defer type="text/javascript" src="JS\mainJS.js" ></script>
+
+	<!-- Bootstrap CDN links -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"> </script>
+</head>
+
+<body>
+	<!-- Navbar -->
+	<nav class="navbar navbar-expand-md mt-1">
+		<div class="container-fluid mx-2">
+			<div class="navbar-brand">
+				<img src="Images/logoBlack.png" class="imageSize img-fluid" alt="logo">
+			</div>	
+		    <button class="navbar-toggler btn shadow-none border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLink" aria-controls="navbarLink" aria-expanded="false" aria-label="Toggler">
+		    	<div>
+		    		<div class="togglerBorder"></div>
+			    	<div class="togglerBorder"></div>
+			    	<div class="togglerBorder"></div>
+		    	</div>
+		    </button>
+			<!-- Container for the 3 links & Log out button -->
+			<div class="collapse navbar-collapse" id="navbarLink">
+				<ul class="navText navbar-nav ms-auto">
+					<li class="nav-item">
+        				<a class="nav-link" href="aboutMe.html">About me</a>
+        			</li>
+					<li class="nav-item">
+        				<a class="nav-link" href="portfolio.html">Portfolio</a>
+        			</li>
+					<li class="nav-item">
+        				<a class="nav-link" href="futurePlans.html">Future plans</a>
+        			</li>        			
+				</ul>
+				<div class="contactbutton py-3">
+					<a href="contactMe.html"><button class="btn shadow-sm border-0 rounded-1" type="button">
+					Contact Me</button></a>
 				</div>
 			</div>
-		</form>
+		</div>
+	</nav>
+
+	<div class="container-fluid">
+		<div class="container">
+			<div class="row justify-content-center align-items-center text-center py-5 vstack">
+				<div class="col-md-12 lh-1 pageTitle">
+					<p>Connect with <span class="textColored">me</span>!</p>
+				</div>
+				<div class="col-md-7 lh-1.5 pageContent">
+					<p>For comments, suggestions, or inquiries, fill out the form below.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div class="container-fluid customBG1">
+		<div class="container py-3">
+			<div class="row my-4 gap-2 justify-content-center align-items-center text-center vstack">
+				<div class="col-lg-8 my-2 container1 rounded-1">
+					<div class="">
+						form here
+					</div>
+				</div>
+				<div class="col-lg-3 gap-2">
+					<div class="container2 rounded-1">
+						<p class="lh-1 mb-0"> FOLLOW MY SOCIALS </p>
+					</div>
+				</div>
+				<div class="col-lg-5 rounded-1">
+					<span class="buttonLinks">
+						<a href="#"><button class="btn border-0" type="button"><i class="bi bi-facebook customIcons"></i></button></a>
+						<a href="#"><button class="btn border-0" type="button"><i class="bi bi-instagram customIcons"></i></button></a>
+						<a href="#"><button class="btn border-0" type="button"><i class="bi bi-linkedin customIcons"></i></i></button></a>
+					</span>
+				</div>
+			</div>
+		</div>	
 	</div>
 </body>
 </html>
