--- a/futurePlans.html
+++ b/futurePlans.html
@@ -1,50 +1,110 @@
-<!DOCTYPE html>
-<html> 
+<!DOCTYPE html> 
+<html lang="en">
 <head>
-	<title>shaine.com / Future plans</title>	
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width,initial-scale=1"/>
+	<meta name="description" content=""/>
+	<title>shaine.com · Future Plans</title>
+
+	<!-- Custom Stylesheets -->
 	<link rel="stylesheet" href="CSS\mainCss.css">
 	<link rel="stylesheet" href="CSS\futurePlansCss.css">
-	<script defer src="JS\mainJS.js"></script>
+	<script defer type="text/javascript" src="JS\mainJS.js" ></script>
+
+	<!-- Bootstrap CDN links -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"> </script>
 </head>
+
 <body>
-	<div class="navbar">
-		<nav>
-			<span class="titleWeb"> <a href="#">shaine.com</a> </span>
-			<span class="logoutButton"> <a href="index.html">Log out</a> </span>
-			<span class="nav3">
-				<a class="navlink" href="futurePlans.html">Future plans</a>
-				<a class="navlink" href="portfolio.html">Portfolio</a>
-				<a class="navlink" href="aboutMe.html">About me</a>
-			</span>
-		</nav>
-	</div>
-
-	<div class="container">	
-			<div class="textContainer1">
-				<span class="titleContainer1"> <p>My future plans</p> </span>
-				<p>Get to know my plans and goals in the next years</p>
-			</div>
-		<div class="container1">
-			<div class="picContainer1">
-				<div class="imgBox">
-					<span class="imgBoxTitle"><p>Let's go six-digit income!</p></span>
-					<p>After graduating college, it is time to look for jobs that would match my forte. This is a long-term plan and I will start at the very bottom.</p>
-					<p>Join one company and another, continously gaining experience, learning new things in the industry as well as honing the skills that will benefit both myself and the company I will take part on.</p>
-				</div>
-
-				<div class="imgBox">
-					<span class="imgBoxTitle"><p>Spoil the inner child</p></span>
-					<p>What's better than to spoil yourself with things you never had when you were young.</p>
-					<p>Own a house, travel to other places, have a cat, and so much more things that I want to experience in your life before I disappear.</p>
-				</div>
-
-				<div class="imgBox">
-					<span class="imgBoxTitle"><p>Happy life and peaceful mind</p></span>
-					<p>Living a life full of hapiness is a blessing I want to receive. I also want to give some back my parents, help those in need, and donate to an animal shelter.</p>
-					<p>I want to live with a partner, no kids, just the two of us in a small house where we spend the rest of our lives together until we get old. </p>
+	<!-- Navbar -->
+	<nav class="navbar navbar-expand-md mt-1">
+		<div class="container-fluid mx-2">
+			<div class="navbar-brand">
+				<img src="Images/logoBlack.png" class="imageSize img-fluid" alt="logo">
+			</div>	
+		    <button class="navbar-toggler btn shadow-none border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLink" aria-controls="navbarLink" aria-expanded="false" aria-label="Toggler">
+		    	<div>
+		    		<div class="togglerBorder"></div>
+			    	<div class="togglerBorder"></div>
+			    	<div class="togglerBorder"></div>
+		    	</div>
+		    </button>
+			<!-- Container for the 3 links & Log out button -->
+			<div class="collapse navbar-collapse" id="navbarLink">
+				<ul class="navText navbar-nav ms-auto">
+					<li class="nav-item">
+        				<a class="nav-link" href="aboutMe.html">About me</a>
+        			</li>
+					<li class="nav-item">
+        				<a class="nav-link" href="portfolio.html">Portfolio</a>
+        			</li>
+					<li class="nav-item">
+        				<a class="nav-link" href="futurePlans.html">Future plans</a>
+        			</li>        			
+				</ul>
+				<div class="contactbutton py-3">
+					<a href="contactMe.html"><button class="btn shadow-sm border-0 rounded-1" type="button">
+					Contact Me</button></a>
 				</div>
 			</div>
 		</div>
+	</nav>
+
+	<div class="container-fluid">
+		<div class="container">
+			<div class="row justify-content-center align-items-center text-center py-5 vstack">
+				<div class="col-md-12 lh-1 pageTitle">
+					<p>My future <span class="textColored">plans</span></p>
+				</div>
+				<div class="col-md-7 lh-1.5 pageContent">
+					<p>Get to know my plans and goals for the next years.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- First Row -->
+	<div class="container-fluid customBG1">
+		<div class="container py-3">
+			<div class="row my-4 justify-content-center align-items-center text-center">
+				<div class="col-lg-7 my-2">
+					<div class="customIcon1 mb-3"><i class="bi bi-briefcase-fill"></i></i></i></div>
+					<p class="title1 lh-1 mb-3">Let’s go <span class="textColored">6-digit income</span></p>
+					<p class="content1 lh-1.5">
+						After graduating college, it is time to look for jobs that would match my forte. This is a long-term plan and I will start at the very bottom. <br><br> Join one company and another, continuously gaining experience, learning new things in the industry as well as honing the skills that will benefit both myself and the company I will take part on.
+					</p>
+				</div>
+			</div>
+		</div>	
+	</div>
+	<!-- Second row -->
+	<div class="container-fluid customBG2">
+		<div class="container py-3">
+			<div class="row my-4 justify-content-center align-items-center text-center">
+				<div class="col-lg-7 my-2">
+					<div class="customIcon2 mb-3"><i class="bi bi-gift-fill"></i></div>
+					<p class="title2 lh-1 mb-3">Spoil the <span class="textColored">inner child</span></p>
+					<p class="content2 lh-1.5">
+						What's better than to spoil yourself with things you never had when you were young.<br><br> Own a house, travel to other places, have a cat, and so much more things that I want to experience in my life before I disappear.
+					</p>
+				</div>		
+			</div>
+		</div>	
+	</div>
+	<!-- Third row -->
+	<div class="container-fluid customBG1">
+		<div class="container py-3">
+			<div class="row my-4 justify-content-center align-items-center text-center">
+				<div class="col-lg-7 my-2">
+					<div class="customIcon1 mb-3"><i class="bi bi-heart-fill"></i></div>
+					<p class="title1 lh-1 mb-3">Happy life and <span class="textColored">peaceful mind</span></p>
+					<p class="content1 lh-1.5">
+						Living a life full of hapiness is a blessing I want to receive. I also want to give some back to my parents, help those in need, and donate to charity or an animal shelter.<br><br> I want to live with a partner, no kids, just the two of us in a small house where we spend the rest of our lives together until we get old.
+					</p>
+				</div>		
+			</div>
+		</div>	
 	</div>
 </body>
 </html>
