--- a/aboutMe.html
+++ b/aboutMe.html
@@ -6,7 +6,7 @@
 	<meta name="description" content=""/>
 	<title>shaine.com · About Me</title>
 
-	<!-- Custom Stylesheets -->
+	<!-- Custom Stylesheets and Scripts -->
 	<link rel="stylesheet" href="CSS\mainCss.css">
 	<link rel="stylesheet" href="CSS\aboutMeCss.css">
 	<script defer type="text/javascript" src="JS\mainJS.js" ></script>
@@ -22,7 +22,8 @@
 		<div class="container-fluid mx-2">
 			<div class="navbar-brand">
 				<img src="Images/logoBlack.png" class="imageSize img-fluid" alt="logo">
-			</div>	
+			</div>
+			<!-- Custom toggler button -->	
 		    <button class="navbar-toggler btn shadow-none border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLink" aria-controls="navbarLink" aria-expanded="false" aria-label="Toggler">
 		    	<div>
 		    		<div class="togglerBorder"></div>
@@ -50,7 +51,7 @@
 			</div>
 		</div>
 	</nav>
-
+	<!-- Title and content -->
 	<div class="container-fluid">
 		<div class="container">
 			<div class="row justify-content-center align-items-center text-center py-5 vstack">
@@ -66,21 +67,24 @@
 			</div>
 		</div>
 	</div>
-
+	<!-- Bottom content -->
 	<div class="container-fluid customBG1">
 		<div class="container py-1">
 			<div class="row row-cols-lg-3 my-5 justify-content-center align-items-center text-center">
+				<!-- Left content -->
 				<div class="col-lg-4 my-1">
 					<p class="title1 lh-1">Why <span class="textColored">UI/UX Design</span>?</p>
 					<p class="content1 lh-1.5 ">
 						It was in high school where I wanted to be a programmer. As I entered college in my freshman year, I discovered something I am good at, which is graphic designing. I thought <i>"Why not I become a programmer and a designer at the same time?"</i> <br><br>
 					</p>
 				</div>
+				<!-- Image at the center -->
 				<div class="col-lg-4 mb-3">
 					<div class="ratio ratio-1x1">
 						<img src="Images/img1.png">
 					</div>
 				</div>
+				<!-- Right content -->
 				<div class="col-lg-4 my-1">
 					<p class="title1 lh-1"> From nothing, to <span class="textColored">passion</span><p>
 					<p class="content1 lh-1.5 ">
