--- a/futurePlans.html
+++ b/futurePlans.html
@@ -6,7 +6,7 @@
 	<meta name="description" content=""/>
 	<title>shaine.com · Future Plans</title>
 
-	<!-- Custom Stylesheets -->
+	<!-- Custom Stylesheets and Scripts -->
 	<link rel="stylesheet" href="CSS\mainCss.css">
 	<link rel="stylesheet" href="CSS\futurePlansCss.css">
 	<script defer type="text/javascript" src="JS\mainJS.js" ></script>
@@ -23,7 +23,8 @@
 		<div class="container-fluid mx-2">
 			<div class="navbar-brand">
 				<img src="Images/logoBlack.png" class="imageSize img-fluid" alt="logo">
-			</div>	
+			</div>
+			<!-- Custom toggler button -->
 		    <button class="navbar-toggler btn shadow-none border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLink" aria-controls="navbarLink" aria-expanded="false" aria-label="Toggler">
 		    	<div>
 		    		<div class="togglerBorder"></div>
@@ -51,7 +52,7 @@
 			</div>
 		</div>
 	</nav>
-
+	<!-- Title and content -->
 	<div class="container-fluid">
 		<div class="container">
 			<div class="row justify-content-center align-items-center text-center py-5 vstack">
