--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 	<meta name="description" content=""/>
 	<title>shaine.com · Portfolio</title>
 
-	<!-- Custom Stylesheets -->
+	<!-- Custom Stylesheets and Scripts -->
 	<link rel="stylesheet" href="CSS\mainCss.css">
 	<link rel="stylesheet" href="CSS\portfolioCss.css">
 	<script defer type="text/javascript" src="JS\mainJS.js" ></script>
@@ -23,6 +23,7 @@
 			<div class="navbar-brand">
 				<img src="Images/logoBlack.png" class="imageSize img-fluid" alt="logo">
 			</div>	
+			<!-- Custom toggler button -->
 		    <button class="navbar-toggler btn shadow-none border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLink" aria-controls="navbarLink" aria-expanded="false" aria-label="Toggler">
 		    	<div>
 		    		<div class="togglerBorder"></div>
@@ -50,7 +51,7 @@
 			</div>
 		</div>
 	</nav>
-
+	<!-- Custom toggler button -->
 	<div class="container-fluid">
 		<div class="container">
 			<div class="row justify-content-center align-items-center text-center py-5 vstack">
@@ -61,7 +62,7 @@
 					<p>Take a look at my recent projects. For a full preview of my best works, you can download my portfolio below.</p>
 				</div>
 				<div class="col-md-4 my-2 customButton">
-					<a href="https://drive.google.com/file/d/1Lk3HBr_Xc0a18famgU2jyqcqUsKwVkLa/view?usp=share_link" download="Portfolio.pdf"> <button class="btn outline-0 shadow border-0 rounded-1 lh-1 px-3 py-2" type="button"> DOWNLOAD PORTFOLIO </button> </a>
+					<a href="https://drive.google.com/file/d/1Lk3HBr_Xc0a18famgU2jyqcqUsKwVkLa/view?usp=share_link" download="Portfolio.pdf" target="_blank"> <button class="btn outline-0 shadow border-0 rounded-1 lh-1 px-3 py-2" type="button"> DOWNLOAD PORTFOLIO </button> </a>
 				</div>
 			</div>
 		</div>
@@ -70,6 +71,7 @@
 	<div class="container-fluid customBG1">
 		<div class="container py-3">
 			<div class="row row-cols-lg-3 gap-3 my-3 justify-content-center align-items-center">
+				<!-- Text -->
 				<div class="col-lg-4 my-2">
 					<p class="title1 lh-1 mb-2">CSIT Days 2023</p>
 					<div class="subtitle1Box subtitle1 rounded-1"><p> April 2023 </p></div>
@@ -77,6 +79,7 @@
 						The second time I created a layout for this annual event partnered by the Computer Science and Information Technology Department.<br><br>The theme for this year is Arcade. The whole department were divided into four teams, and will face together on every competition. Team that has the most points win.
 					</p>
 				</div>
+				<!-- Image Carousel -->
 				<div class="col-lg-7 my-2">
 					<div class="d-flex flex-row flex-nowrap overflow-auto py-1">
 				        <div class="ratio ratio-1x1 cardScroll"><img src="Images/MainPoster_CSIT2023.png" alt="img1"></div>
@@ -91,6 +94,7 @@
 	<div class="container-fluid customBG2">
 		<div class="container py-3">
 			<div class="row row-cols-lg-3 gap-3 my-3 justify-content-center align-items-center">
+				<!-- Text -->
 				<div class="col-lg-4 order-lg-2 my-2">
 					<p class="title2 lh-1 mb-2">Sir Kit's ITems</p>
 					<div class="subtitle1Box subtitle2 rounded-1"><p> February 2023 </p></div>
@@ -98,6 +102,7 @@
 						Weeks after the Merch Design Contest is Sir Kit's ITems, an income generating project of BUCS-CircUITS. The winning design from the contest were used as the organization's official merchandise for the academic year 2022-2023.<br><br> This is the time where I did some experiments and explored new styles that could be useful for my next projects.
 					</p>
 				</div>
+				<!-- Image Carousel -->
 				<div class="col-lg-7 order-lg-1 my-2">
 					<div class="d-flex flex-row flex-nowrap overflow-auto py-1">
 				        <div class="ratio ratio-1x1 cardScroll"><img src="Images/MainPosterMerch-2.png" alt="img1"></div>
@@ -112,6 +117,7 @@
 	<div class="container-fluid customBG1">
 		<div class="container py-3">
 			<div class="row row-cols-lg-3 gap-3 my-3 justify-content-center align-items-center">
+				<!-- Text -->
 				<div class="col-lg-4 my-2">
 					<p class="title1 lh-1 mb-2">Merch Design Contest</p>
 					<div class="subtitle1Box subtitle1 rounded-1"><p> January 2023 </p></div>
@@ -119,6 +125,7 @@
 						A contest for the students within the department where they can showcase their creative skills. I used a gradient-like background and a simple title for the layout to highlight each entry.
 					</p>
 				</div>
+				<!-- Image Carousel -->
 				<div class="col-lg-7 my-2">
 					<div class="d-flex flex-row flex-nowrap overflow-auto py-1">
 				        <div class="ratio ratio-1x1 cardScroll"><img src="Images/MerchDesignMain-2.png" alt="img1"></div>
@@ -136,6 +143,7 @@
 				<div class="col-lg-7 text-center">
 					<p class="title2 lh-1 mb-2">Other layouts</p>
 				</div>
+				<!-- Image Carousel -->
 				<div class="col-lg-12">
 					<div class="d-flex flex-row flex-nowrap overflow-auto py-1">
 						<div class="ratio ratio-1x1 cardScroll2"><img src="Images/JOB FAIR 2022_denso.jpg" alt="img"></div>
