minor adjustments for colored texts

--- a/futurePlans.html
+++ b/futurePlans.html
@@ -71,7 +71,7 @@
 			<div class="row my-4 justify-content-center align-items-center text-center">
 				<div class="col-lg-7 my-2">
 					<div class="customIcon1 mb-3"><i class="bi bi-briefcase-fill"></i></i></i></div>
-					<p class="title1 lh-1 mb-3">Let’s go <span class="textColored">6-digit income</span></p>
+					<p class="title1 lh-1 mb-3">Let’s go <span class="textColored">6-digit</span> income</p>
 					<p class="content1 lh-1.5">
 						After graduating college, it is time to look for jobs that would match my forte. This is a long-term plan and I will start at the very bottom. <br><br> Join one company and another, continuously gaining experience, learning new things in the industry as well as honing the skills that will benefit both myself and the company I will take part on.
 					</p>
@@ -85,7 +85,7 @@
 			<div class="row my-4 justify-content-center align-items-center text-center">
 				<div class="col-lg-7 my-2">
 					<div class="customIcon2 mb-3"><i class="bi bi-gift-fill"></i></div>
-					<p class="title2 lh-1 mb-3">Spoil the <span class="textColored">inner child</span></p>
+					<p class="title2 lh-1 mb-3">Spoil the <span class="textColored">inner</span> child</p>
 					<p class="content2 lh-1.5">
 						What's better than to spoil yourself with things you never had when you were young.<br><br> Own a house, travel to other places, have a cat, and so much more things that I want to experience in my life before I disappear.
 					</p>
@@ -99,7 +99,7 @@
 			<div class="row my-4 justify-content-center align-items-center text-center">
 				<div class="col-lg-7 my-2">
 					<div class="customIcon1 mb-3"><i class="bi bi-heart-fill"></i></div>
-					<p class="title1 lh-1 mb-3">Happy life and <span class="textColored">peaceful mind</span></p>
+					<p class="title1 lh-1 mb-3">Happy life and <span class="textColored">peaceful</span> mind</p>
 					<p class="content1 lh-1.5">
 						Living a life full of hapiness is a blessing I want to receive. I also want to give some back to my parents, help those in need, and donate to charity or an animal shelter.<br><br> I want to live with a partner, no kids, just the two of us in a small house where we spend the rest of our lives together until we get old.
 					</p>
